--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,10 +39,12 @@ html {
     font-size: 5em;
   }
   .map {
-    background-color: $red;
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
+    display: flex;
+    justify-content: center;
+    height: 80vh;
+    width: 60vw;
+    position: relative;
+    border-radius: 5%;
     top: 0;
     left: 0;
   }
