--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,43 +10,50 @@ $green: #4caf50;
 $red: #ff2f20;
 
 * {
-  outline-width: 0 !important;
-  //font-family: 'Roboto';
-  //font-family: 'Lato', sans-serif;
-  //font-family: 'Oswald', sans-serif;
+	outline-width: 0 !important;
+	//font-family: 'Roboto';
+	//font-family: 'Lato', sans-serif;
+	//font-family: 'Oswald', sans-serif;
 }
 body,
 html {
-  padding: 0;
-  margin: 0;
-  background-color: $blue;
+	padding: 0;
+	margin: 0;
+	background-color: $blue;
 }
 
 :root {
-  --bg1: #e5e5e5;
-  --bg2: #eee;
-  --bg3: #fff;
+	--bg1: #e5e5e5;
+	--bg2: #eee;
+	--bg3: #fff;
 
-  --color: #000;
+	--color: #000;
 }
 
 #global {
-  margin: 2rem;
-  display: flex;
-  justify-content: center;
-  h2 {
-    font-family: 'Oswald', sans-serif;
-    font-size: 5em;
-  }
-  .map {
-    display: flex;
-    justify-content: center;
-    height: 80vh;
-    width: 60vw;
-    position: relative;
-    border-radius: 5%;
-    top: 0;
-    left: 0;
-  }
+	//margin: 2rem;
+	display: flex;
+	justify-content: center;
+	h2 {
+		font-family: 'Oswald', sans-serif;
+		font-size: 5em;
+	}
+	.map {
+		height: 100vh;
+		width: 100vw;
+		position: fixed;
+		top: 0;
+		left: 0;
+	}
+	.search-container {
+		position: fixed;
+		top: 20px;
+		left: 20px;
+		background-color: white;
+		z-index: 999;
+		box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+		width: 250px;
+		padding: 5px;
+		border-radius: 5px;
+	}
 }
-
